# nix-shell-templates

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  cog.toml  flake.nix
containers/: flake-module.nix
doc/: book.toml
doc/src/: SUMMARY.md  introduction.md
doc/src/getting-started/: installation.md  project-structure.md  quick-start.md
doc/src/modules/: common.md  containers.md  fpga.md  python.md  rust.md  typst.md
doc/src/reference/: architecture.md  contributing.md
doc/src/templates/: customization.md  using-templates.md
modules/: common.nix  fpga.nix  python.nix  rust.nix  typst.nix
templates/: oss-cad-suite.nix
templates/default/: flake.nix
templates/fpga/: flake.nix  oss-cad-suite.nix
templates/python/: flake.nix  pyproject.toml
templates/rust/: Cargo.toml  flake.nix  rust-toolchain.toml
templates/typst/: flake.nix
