[package]
name = "my-project"
version = "0.1.0"
edition = "2024"
authors = []
description = ""
license = "MIT"

[dependencies]

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
